<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:title="@string/txt_theme"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/subitem1.1"
                android:title="@string/txt_dark_theme" />
            <item
                android:id="@+id/subitem1.2"
                android:title="@string/txt_default" />
        </menu>
    </item>

    <item
        android:id="@+id/item2"
        android:title="@string/txt_language"
        app:showAsAction="never">
        <menu>

            <item
                android:id="@+id/subitem2.1"
                android:title="@string/txt_vietnamese" />

            <item
                android:id="@+id/subitem2.2"
                android:title="@string/txt_english" />
            <item
                android:id="@+id/subitem2.3"
                android:title="@string/txt_korean" />
            <item
                android:id="@+id/subitem2.4"
                android:title="@string/txt_japanese" />
            <item
                android:id="@+id/subitem2.5"
                android:title="@string/txt_chinese" />
        </menu>
    </item>

    <item
        android:id="@+id/item3"
        android:title="@string/txt_privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/item4"
        android:title="@string/txt_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/item5"
        android:title="@string/txt_about_me"
        app:showAsAction="never" />

</menu>